--- a/src/Components/Register/Register.module.css
+++ b/src/Components/Register/Register.module.css
@@ -35,8 +35,13 @@
     border-radius: 3px;
     margin-top: 25px;
 }
+
 .button:hover,
 .button:focus {
     background-color: rgba(0, 139, 139, 0.445);
     color: bisque;
 }
+
+/* .button:disabled:hover {
+    background-color: rgba(128, 128, 128, 0.438);
+} */
