Добавляет оформление в зедер

--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .Header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     /* width: 100%; */
     padding: 0;
     /* top: 0;
@@ -13,13 +13,30 @@
     margin: 30px;
     color: rgba(16, 71, 73, 0.993);
     text-decoration: none;
-    width: calc(100% / 2);
+    width: 300px;
     height: inherit;
-    text-align: center;
+    text-align: left;
     font-size: 26px;
 }
 
 .activeLink {
     color: rgb(18, 184, 170);
     font-weight: bold;
+}
+
+.authLinkThumb {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.authLink {
+    display: block;
+    margin: 30px;
+    color: rgba(16, 71, 73, 0.993);
+    text-decoration: none;
+    width: calc(100% / 2);
+    height: inherit;
+    text-align: center;
+    font-size: 16px;
 }
