--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,11 +1,13 @@
+.nav {
+    width: 100%;
+    box-shadow: -5px 5px 5px rgba(71, 203, 207, 0.137);
+}
+
 .Header {
     display: flex;
     justify-content: space-between;
-    /* width: 100%; */
+
     padding: 0;
-    /* top: 0;
-    left: 0; */
-    box-shadow: -5px 5px 5px rgba(71, 203, 207, 0.137);
 }
 
 .navLink {
